--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "prettier": "1.11.1"
   },
   "prettier": {
     "singleQuote": true
+  },
+  "eslintConfig": {
+    "extends": ["eslint:recommended", "prettier"],
+    "parserOptions": {
+      "ecmaVersion": 6
+    },
+    "env": {
+      "browser": true,
+      "webextensions": true
+    }
   }
 }
