Set up NodeIterator

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,11 @@
   "manifest_version": 2,
   "name": "The Unnecessary Filter",
   "version": "1.0.0",
-  "description": "Keep the web clean, possibly."
+  "description": "Keep the web clean, possibly.",
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "js": ["content-script.js"]
+    }
+  ]
 }
