--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "build": "webpack --mode=production"
   },
+  "dependencies": {},
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "prettier": "1.11.1",
+    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   },
   "prettier": {
@@ -32,8 +34,5 @@
       "node": true,
       "webextensions": true
     }
-  },
-  "dependencies": {
-    "webpack": "^4.4.1"
   }
 }
