--- a/static/manifest.json
+++ b/static/manifest.json
@@ -6,6 +6,10 @@
   "permissions": ["<all_urls>"],
   "background": {
     "scripts": ["background.js"]
+  },
+  "options_ui": {
+    "page": "options.html",
+    "browser_style": true
   }
 }
 
