Store and retrieve settings

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
       "prettier"
     ],
     "parserOptions": {
-      "ecmaVersion": 2017
+      "ecmaVersion": 2017,
+      "sourceType": "module"
     },
     "env": {
       "browser": true,
