--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "The Unnecessary Filter",
+  "name": "Four Stars",
   "version": "1.0.0",
   "description": "Keep the web clean, possibly.",
   "permissions": ["<all_urls>", "storage"],
