--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Four Stars",
   "version": "1.0.0",
-  "description": "Keep the web clean, possibly.",
+  "description": "An unnecessary filter for your browser.",
   "permissions": ["<all_urls>", "storage"],
   "background": {
     "scripts": ["background.js"]
