--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=production && web-ext build -s dist/ -o",
     "start": "webpack --mode=development -w"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "prettier": "1.11.1",
+    "web-ext": "^2.6.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   },
